--- a/improved-octo-sniffle/improved-octo-sniffle.Tests/improved-octo-sniffle.Tests.csproj
+++ b/improved-octo-sniffle/improved-octo-sniffle.Tests/improved-octo-sniffle.Tests.csproj
@@ -47,7 +47,7 @@
   <ItemGroup>
     <Compile Include="Function\Base.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Timing\PutLootsOfData.cs" />
+    <Compile Include="Timing\GetAndPutRandomData.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
